fixed compiling error on ToggleCollapseButton.module.scss

--- a/frontend-next-migration/src/widgets/Navbar/ui/ToggleCollapseButton/ToggleCollapseButton.module.scss
+++ b/frontend-next-migration/src/widgets/Navbar/ui/ToggleCollapseButton/ToggleCollapseButton.module.scss
@@ -1,4 +1,4 @@
-.ToggleCollapseButton {r
+.ToggleCollapseButton {
     display: flex;
     align-items: center;
     background-color: transparent;
